--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 numpy==1.22.2
-pandas
+pandas==1.5.3
+six==1.11.0
 openpyxl==3.0.7
+category-encoders==2.6.0
 scikit-learn==1.2.2
-category_encoders==2.6.0
-cairosvg==2.7.0
+matplotlib==3.7.1
+CairoSVG==2.7.0
 graphviz==0.20.1
 dtreeviz==2.2.1
