--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+six>=1.15.0
 numpy==1.22.2
 pandas==1.5.3
-six==1.11.0
 openpyxl==3.0.7
 category-encoders==2.6.0
 scikit-learn==1.2.2
@@ -8,3 +8,5 @@ matplotlib==3.7.1
 CairoSVG==2.7.0
 graphviz==0.20.1
 dtreeviz==2.2.1
+toad==0.1.1
+optbinning==0.17.2
