--- a/.gitignore
+++ b/.gitignore
@@ -157,9 +157,9 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
-
+.idea/
 
 # itlubber
 *.DS_Store
 *.pkl
+*.virtual_documents
