--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
 wget
-six>=1.15.0
-numpy==1.22.2
-pandas==1.5.3
-openpyxl==3.0.7
-category-encoders==2.6.0
-scikit-learn==1.2.2
-matplotlib==3.7.1
-CairoSVG==2.7.0
-graphviz==0.20.1
-dtreeviz==2.2.1
-toad==0.1.1
-optbinning==0.17.2
+scorecardpipeline
+category-encoders>=2.6.0
+CairoSVG>=2.7.0
+graphviz>=0.20.1
+dtreeviz>=2.2.1
+reportlab
+svglib
